Overflow issue

--- a/sass/layout/_carousel.scss
+++ b/sass/layout/_carousel.scss
@@ -1,6 +1,6 @@
 .carousel {
     display: flex;
-    width: 100vw;
+    width: 100%;
     // max-width: 100vw;
     overflow-x: scroll;
 
